@@ -28,6 +28,9 @@
 # This is a list of toolchains that are supported on this board.
 set_board_info target_install ${target_triplet}
 
+# Some extra procs for testing with nSim
+search_and_load_file "library file" "nsim-extra.exp" ${boards_dir}
+
 # Load the generic configuration for this board. This will define a basic set
 # of routines needed by the tool to communicate with the board. Depends on the
 # tool.
@@ -45,8 +48,9 @@ set_board_info ldflags   "[libgloss_link_flags] [newlib_link_flags]"
 # No linker script needed.
 set_board_info ldscript ""
 
-# Use port 51000 as the default to communicate on
-set_board_info netport :51000
+# Use port 51000 as the default to communicate on. This will set the netport
+# (used by gdb-comm) as well as setting up nSim specific data.
+nsim_open 51000
 
 # GDB protocol to be used
 set_board_info gdb_protocol "remote"
